<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mymain"
    tools:showIn="@layout/app_bar_mymain">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">


                <ImageView
                    android:id="@+id/imgpic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="1dp"
                    android:src="@drawable/nanny" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        app:cardCornerRadius="10dp"
                        app:contentPaddingBottom="15dp"
                        app:contentPaddingLeft="15dp"
                        app:contentPaddingRight="15dp"
                        app:contentPaddingTop="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="60dp"
                                android:text="@string/nanny2"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/text_skill"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:text="@string/househelp_nanny_cook"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/text_email"
                                android:layout_width="match_parent"
                                android:layout_height="34dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="20dp"
                                android:text="@string/cv"
                                android:textAlignment="center"
                                android:textSize="15sp"
                                android:textStyle="italic" />

                            <TextView
                                android:id="@+id/text_phone"
                                android:layout_width="match_parent"
                                android:layout_height="34dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="20dp"
                                android:text="@string/cv"
                                android:textAlignment="center"
                                android:textSize="15sp"
                                android:textStyle="italic" />

                            <TextView
                                android:id="@+id/text_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:text="@string/location1"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="62dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/rate"
                                android:textSize="35sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/ratingssss"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="62dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/text_fixes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/jobcompletes"
                                android:textSize="35sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/jobss"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/go_online"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/button_round"
                            android:text="@string/hire_me"
                            android:textColor="#ffff" />

                        <ProgressBar
                            android:id="@+id/progressBar4"
                            style="?android:attr/progressBarStyleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="150dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="100dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>